fix: fix feign client bean missing issue.

--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
+    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-seata'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'mysql:mysql-connector-java'
